--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
     "esm": true,
     "transpileOnly": true
   },
-  "include": ["src"],
+  "include": ["src", "scripts"],
   "exclude": ["node_modules", "dist"]
 }
